--- a/assets/scss/fonts.scss
+++ b/assets/scss/fonts.scss
@@ -2,6 +2,7 @@
 // classes like f22-400 are font classes that first number is font size and second number
 // is font weigth
 // clamp is a function for responsive font size or any other property read more on
+// create font face
 @font-face {
   font-family: 'Vazirmatn';
   src: url('./Fonts/Vazirmatn-Black.woff2') format('woff2');
