--- a/assets/scss/fonts.scss
+++ b/assets/scss/fonts.scss
@@ -114,6 +114,18 @@
   font-size: clamp(15px,2vw,18px);
   line-height: 120%;
 }
+.f20-400{
+  font-style: normal;
+  font-weight: 400;
+  font-size: clamp(18px,2vw,20px);
+  line-height: 120%;
+}
+.f20-700{
+  font-style: normal;
+  font-weight: 700;
+  font-size: clamp(18px,2vw,20px);
+  line-height: 120%;
+}
 .f22-400{
   font-style: normal;
   font-weight: 400;
