finish detail product

--- a/assets/scss/Global.scss
+++ b/assets/scss/Global.scss
@@ -27,7 +27,11 @@ body {
   padding: 50px 17px 50px 106px;
 }
 .showdescription .inviteTech:nth-child(2){
-  padding: 25px 17px 25px 106px;
+  padding: 30px 17px 30px 106px;
+}
+.padding-title{
+  padding: 0px 17px 0px 106px;
+  border-radius: 4px 16px 16px 4px;
 }
 // responsive 
 @media (min-width: 1280px){
