set category data

--- a/assets/scss/fonts.scss
+++ b/assets/scss/fonts.scss
@@ -66,6 +66,24 @@
   font-size: clamp(10px,1vw,12px);
   line-height: 120%;
 }
+.f13-400{
+  font-style: normal;
+  font-weight: 400;
+  font-size: clamp(11px,1vw,13px);
+  line-height: 120%;
+}
+.f13-500{
+  font-style: normal;
+  font-weight: 500;
+  font-size: clamp(11px,1vw,13px);
+  line-height: 120%;
+}
+.f13-700{
+  font-style: normal;
+  font-weight: 700;
+  font-size: clamp(11px,1vw,13px);
+  line-height: 120%;
+}
 .f14-400{
   font-style: normal;
   font-weight: 400;
