--- a/assets/scss/Global.scss
+++ b/assets/scss/Global.scss
@@ -33,6 +33,9 @@ body {
   padding: 0px 17px 0px 106px;
   border-radius: 4px 16px 16px 4px;
 }
+.hideClear {
+  display: none !important;
+}
 .line-h{
   line-height: 24px !important;
 }
