--- a/assets/scss/Global.scss
+++ b/assets/scss/Global.scss
@@ -10,6 +10,7 @@
 body {
   background-color: #e9edf5;
   direction: rtl;
+  overflow-x: hidden;
 }
 .shadow-product{
   box-shadow: 0px 10px 40px 0px rgba(0, 0, 0, 0.05);
@@ -39,7 +40,88 @@ body {
 .line-h{
   line-height: 24px !important;
 }
-// responsive 
+.see-detail{
+  &:hover{
+    background-color: #E20054 !important;
+    color: #fff;
+  }
+}
+// responsive
+@media screen and (max-width: 600px) {
+  // header responsive
+  .menu-desktop{
+    display: none;
+  }
+  .header{
+    padding: 15px;
+  }
+  // all product
+  .show-product{
+    flex-wrap: wrap !important;
+    padding: 15px;
+  }
+  .show-search-mobile{
+    flex-wrap: wrap !important;
+    width: 50%;
+  }
+  .product-list{
+    flex-wrap: wrap !important;
+  }
+  .card-product{
+    width: 50%;
+  }
+
+
+
+  // footer
+  .title-footer{
+    display: none;
+  }
+  .footer-menu{
+    flex-wrap: wrap !important;
+    padding: 10px;
+    gap:20px;
+  }
+  .quick-menu-mobile{
+    width: 45% !important ;
+  }
+  .prefooter{
+    flex-wrap: wrap;
+  }
+  .icon-sequrity{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    align-items: center;
+    width: 100%;
+    justify-content: center;
+  }
+  // detail product
+  .showtech{
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .menu-desktop{
+    display: none;
+    
+  }
+  .header{
+    padding: 15px;
+  }
+  .search-link-mobile{
+    padding-left: 80px;
+    padding-right: 80px;
+  }
+}
+@media screen and (min-width: 820px) and (max-width: 1180px) {
+  .search-link-mobile{
+    padding-left: 80px;
+    padding-right: 80px;
+  }
+}
+
+
 @media (min-width: 1280px){
   .container {
     max-width: 1100px !important;
